--- a/TaskService/pom.xml
+++ b/TaskService/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/>
     </parent>
     <groupId>app</groupId>
-    <artifactId>Aop</artifactId>
+    <artifactId>TaskService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Aop</name>
-    <description>Aop</description>
+    <name>TaskService</name>
+    <description>TaskService</description>
 
     <properties>
         <java.version>21</java.version>
@@ -69,6 +69,10 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-common</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
