--- a/TaskService/src/main/resources/application.yml
+++ b/TaskService/src/main/resources/application.yml
@@ -1,6 +1,23 @@
+server:
+  port: 8082
+
 spring:
   application:
     name: Aop
+
+  kafka:
+    producer:
+      enable: true
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: 1
+      idempotence: false
+      topics:
+        - name: task-status-update-event-topic
+          partitions: 2
+          replicas: 1
+          min-insync-replicas: 1
 
   datasource:
     url: jdbc:postgresql://localhost:5433/aop_db
@@ -28,3 +45,7 @@ springdoc:
     path: /api-docs
   swagger-ui:
     path: /ui
+
+
+
+
