--- a/TaskService/src/main/resources/db/changelog/0.0.1/001_create_table_task.yml
+++ b/TaskService/src/main/resources/db/changelog/0.0.1/001_create_table_task.yml
@@ -12,26 +12,47 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
                     nullable: false
-
               - column:
                   name: title
                   type: varchar(255)
                   constraints:
                     nullable: true
-
               - column:
                   name: description
                   type: varchar(255)
                   constraints:
                     nullable: true
-
               - column:
                   name: user_id
                   type: bigint
                   constraints:
                     nullable: true
-
       rollback:
         - dropTable:
+            tableName: task
+
+  - changeSet:
+      id: 002_add_status_column
+      author: Nikita Kulga
+      changes:
+        - addColumn:
+            tableName: task
+            columns:
+              - column:
+                  name: status
+                  type: varchar(50)
+                  constraints:
+                    nullable: true
+
+  - changeSet:
+      id: 003_rename_table
+      author: Nikita Kulga
+      changes:
+        - renameTable:
+            oldTableName: task
+            newTableName: tasks
+
+      rollback:
+        - dropColumn:
             tableName: task
 
